--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,8 +53,10 @@ dev_dependencies:
   build_runner: ^2.4.6
   built_value_generator: ^8.9.2
   mockito: ^5.3.2
-  bloc_test: ^9.0.3
+  bloc_test: ^9.1.7
   mocktail: ^0.3.0
+  integration_test:
+    sdk: flutter
 
 
 
@@ -76,6 +78,10 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+    - assets/
+    - assets/images/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
